# reader-project

./: .gitignore  LICENSE  README.md  bun.lockb  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: deploy.yml  main.yml
docs/: README.md  _coverpage.md  _sidebar.md  developer.md  getting-started.md  index.html  index.html.docsify  opml.md  requirement.txt  resources.txt  rss.txt  screenshots.md  translation.md
sidecar-app/: .gitignore  README.md  bun.lockb  index.js  move-app-bundle.js  package-lock.json  package.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  experimental.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: feed_posts.rs
src/lib/: constants.js  constants.ts  db.ts  defaults.ts  globals.d.ts  logging.ts  store.ts  types.ts  utils.ts
src/lib/components/: AppButton.svelte  empty_state.svelte  random_background.ts  settingsModal.svelte  spinner.svelte  titlebar.svelte  tray.ts
src/lib/content_view/: content_loading_state.svelte  html_cleaner.ts  parser_view.svelte  parsers.ts  web_iframe.svelte
src/lib/dao/: feed_db.ts  post_db.ts  store.ts
src/lib/experimental/: audio_tts.ts  summarization.ts  translation.ts  worker.js
src/lib/feed/: add_feed_modal.svelte  feed_expand.svelte  feed_item.svelte  feed_modal.svelte  feed_options.svelte  rss_feed.svelte
src/lib/pages/: app_loader.ts
src/lib/post/: post_feed.svelte  (+2 more)
src/routes/: +layout.svelte  +page.svelte
(+94 files in other folders)
